# recoder

./: .gitignore  README.md  pyproject.toml  recoder.toml.example
archives/ccr/frontend-20260705/: .current_session_id  .pending_user_msg  .session_state.json  commit_links.json  main.md  memory_metrics.json  metadata.yaml  patterns.json  sessions.db  summary_meta.yaml  triples.json
archives/ccr/frontend-20260705/branches/: _registry.md
archives/ccr/frontend-20260705/branches/main/: commits.md  log.md  summaries.md
archives/ccr/frontend-20260705/metrics/: sessions.jsonl
docs/superpowers/plans/: 2026-07-05-recoder-implementation-plan.md
docs/superpowers/specs/: 2026-07-05-memory-routing-design.md  2026-07-05-recoder-design.md
recoder/: __main__.py  cli.py  config.py  doctor.py  store.py
recoder/analysis/: action_items.py  consolidate.py  prompts.py  routing.py  session.py
recoder/capture/: audio.py  snapshots.py
recoder/pipeline/: merge.py  runner.py  transcribe.py
recoder/web/: app.py  desktop.py  recording.py
recoder/web/static/: index.html
scripts/: install_shortcuts.ps1  make_icon.py  setup.ps1
spikes/: spike_a_loopback.py  spike_b_whisper.py  spike_c_sdk.py  spike_d_live_e2e.py  spike_e_gladia_live.py  spike_f_full_live.py
tests/: test_action_items.py  test_analysis.py  test_audio.py  test_config.py  test_consolidate.py  test_desktop.py  test_merge.py  test_routing.py  test_runner.py  test_snapshots.py  test_store.py  test_transcribe.py  test_web.py
tests/fixtures/: make_fixtures.ps1
