[project]
name = "recoder"
version = "0.1.0"
description = "Local, personal, context-aware meeting recorder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyaudiowpatch",
    "soundfile",
    "numpy",
    "mss",
    "pygetwindow",
    "imagehash",
    "Pillow",
    "fastapi",
    "uvicorn",
    "typer",
    "claude-agent-sdk",
    "psutil",
]

[project.optional-dependencies]
ml = [
    "whisperx",
    "torch",
]

[project.scripts]
recoder = "recoder.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recoder"]
